...
    "reminder24h": "24 ώρες πριν",
    "reminder12h": "12 ώρες πριν",
    "reminder2h": "2 ώρες πριν",
    "reminder1h": "1 ώρα πριν",
    "iosTip": "Σε iOS, προσθέστε αυτή την εφαρμογή στην Αρχική Οθόνη πρώτα για να λαμβάνετε push ειδοποιήσεις.",
    "display": "Εμφάνιση",
    "language": "Γλώσσα",
    "languageEnglish": "Αγγλικά",
    "languageGreek": "Ελληνικά",
    "darkTheme": "Σκοτεινό Θέμα",
    "sportsFilter": "Φίλτρο Αθλημάτων",
    "football": "Ποδόσφαιρο",
    "volleyball": "Βόλεϊ",
...
